<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BillShow</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="email_hint">example@sina.com</string>
    <string name="login">登录</string>
    <string name="reg">注册</string>
    <string name="title_activity_reg">RegActivity</string>
    <string name="password_comfirm">密码确认</string>
    <string name="username">昵称</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_activity_bills">BillsActivity</string>
    <string name="title_activity_bill_form">BillFormActivity</string>
    <string name="title_activity_places">PlacesActivity</string>
    <string name="write_bill">记账</string>
    <string name="write_cost">记消费</string>
    <string name="title_activity_cost_form">CostFormActivity</string>
    <string name="logout">登出</string>
    <string name="exit">退出</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="hello">你好</string>
    <string name="bills_count">账单数</string>
    <string name="costs_sum">消费总额</string>
    <string name="title_activity_costs">CostsActivity</string>
    <string name="search_place">搜索地点</string>
    <string name="location">所在位置</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="money">金额</string>
    <string name="desc">描述</string>
    <string name="submit">提交</string>
    <string name="add_bill_price">选择商品</string>
    <string name="bill_form">账单</string>
    <string name="search_good_hint">条形码或商品名</string>
    <string name="name">名称</string>
    <string name="advence">高级属性</string>
    <string name="unit">单位</string>
    <string name="default_unit"></string>
    <string name="tag_list">标签</string>
    <string name="norm">规格</string>
    <string name="barcode">条形码</string>
    <string name="origin">原产地</string>
    <string name="search_good">搜索商品</string>
    <string name="search">搜索</string>
    <string name="near">周边</string>
    <string name="require_name">名称(*)</string>
    <string name="require_unit">单位(*)</string>
    <string name="hint_taglist">请使用半角,分割。例如:酒,白酒</string>
    <string name="cost">消费</string>
    <string name="yuan">元</string>
    <string name="title_activity_search_good">SearchGoodActivity</string>
    <string name="place">地点</string>
    <string name="new_good">新品</string>
    <string name="update_info_url">http://shenmajia.tk/apk_info.json</string>
    <string name="feedback">反馈</string>
    <string name="place_search_hint">地点名称，如：KTV</string>
    <string name="good_search_hint">商品名称或条形码</string>

</resources>