<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/et_password"
        android:layout_alignBottom="@+id/et_password"
        android:layout_toLeftOf="@+id/et_password"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="29dp"
        android:layout_marginTop="70dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_password"
        android:layout_below="@+id/et_password"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="48dp"
        android:onClick="loginClick"
        android:text="@string/login" />

    <Button
        android:id="@+id/btn_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_login"
        android:layout_alignBottom="@+id/btn_login"
        android:layout_marginLeft="28dp"
        android:layout_toRightOf="@+id/btn_login"
        android:onClick="regClick"
        android:text="@string/reg" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/et_email"
        android:layout_alignBottom="@+id/et_email"
        android:layout_toLeftOf="@+id/et_email"
        android:text="@string/email"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_email"
        android:layout_alignRight="@+id/et_email"
        android:layout_below="@+id/et_email"
        android:layout_marginTop="42dp"
        android:ems="10"
        android:inputType="textPassword" />

</RelativeLayout>