<?xml version="1.0" encoding="utf-8"?>  
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CostFormActivity" >

    <TextView
        android:id="@+id/tv_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="28dp"
        android:text="@string/money"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="91dp"
        android:text="@string/desc"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/et_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv_money"
        android:layout_alignBottom="@+id/tv_money"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@+id/tv_money"
        android:ems="10"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/et_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tv_desc"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@+id/tv_desc"
        android:ems="10"
        android:gravity="top"
        android:height="250dp"
        android:inputType="textMultiLine"
        android:maxLength="255" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_desc"
        android:layout_below="@+id/et_desc"
        android:layout_marginTop="18dp"
        android:onClick="submit"
        android:text="@string/submit" />

</RelativeLayout>