<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchGoodActivity" >

    <RelativeLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical|center_horizontal" >

                
        <Button
            android:id="@+id/btn_place_goods"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:onClick="load_place_goods"
            android:text="@string/place" />
        
        <Button
            android:id="@+id/btn_new_good"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/btn_place_goods"
            android:onClick="new_good"
            android:text="@string/new_good" />

        <Button
            android:id="@+id/btn_search_good"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/btn_new_good"
            android:onClick="search_good"
            android:text="@string/search" />

        <EditText
            android:id="@+id/et_search_good_q"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@id/btn_search_good"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:minWidth="100dip" >

            <requestFocus />
        </EditText>
    </RelativeLayout>

    <com.handmark.pulltorefresh.library.PullToRefreshListView
        android:id="@+id/lv_goods"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/head"
        android:background="#ffffff"
        android:cacheColorHint="#00000000"
        android:divider="#19000000"
        android:dividerHeight="1dp"
        android:fadingEdge="none"
        android:fastScrollEnabled="true"
        android:footerDividersEnabled="false"
        android:headerDividersEnabled="false"
        android:smoothScrollbar="true" />

</RelativeLayout>